--- a/styles/home.css
+++ b/styles/home.css
@@ -2,16 +2,6 @@
 Header 
 ************* */
 
-:root {
-	--color-text:#111;
-	--color-witteh2:white;
-    --color-kawasakikleur: green;
-}
-
-*{
-    margin: 0;
-}
-
 body header h1 img{
     width: 20%;
     height: auto;
@@ -33,6 +23,10 @@ body nav ul li{
     list-style: none;
 }
 
+body header nav ul li a{
+    font-family: 'basicbold';
+}
+
 .hamburger {
     display: flex;
     flex-direction: column;
@@ -42,7 +36,7 @@ body nav ul li{
     background: none;
     border: none;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
 }
 
 .hamburger span {
@@ -55,7 +49,6 @@ nav {
     top: 50%;
     right: 0;
     background-color: var(--color-kawasakikleur);
-    width: 50vw;
     display: none; 
 }
 
@@ -90,6 +83,12 @@ nav.active {
 Main styling
 *********** */
 
+body{
+    background-image: url(../images/background-img.jpg);
+    background-size: cover;
+    
+}
+
 body main section:nth-of-type(1){
     background-image: url(../images/z900.jpg);
     background-size: cover;
@@ -101,14 +100,254 @@ body main section:nth-of-type(1) h2{
     color: var(--color-witteh2);
     /* font-family: ; */
     padding-top: 15%;
-
+    display: grid;
+    grid-template-columns: min-content;
+    line-height: 1.5;
 }
 
 body main section:nth-of-type(1) a{
     color: var(--color-kawasakikleur);
-    /* font-family: ''; */
+    font-family: 'basicbold';
 }
 
-body main section:nth-of-type(1) {
+h2 {
+    font-family: 'kawasakisportnobold';
+}
+
+a{
+    font-family: 'basicbold';
+}
+
+
+/* ***********
+Forum styling #1
+************ */
+
+main section:nth-of-type(2) form{
+    display: grid;
+    gap: 1em;
+    place-content:center;
+    width: 90%;
+    max-width: 30em;
+    margin: auto;
+
+    /* HULP VAN STUDENT ASSISTENT */
+    grid-template-columns: 1fr 1fr;
+    
+    background-color: white;
+    padding: 2em;
+    filter: drop-shadow(1rem 1rem 20px);
+}
+
+main section:nth-of-type(2) h2{
+    text-align: center;
+    margin-top: 7%;
+    margin-bottom: 5%;
+}
+
+main section:nth-of-type(2) form fieldset{
+    border: none;
+    display: grid;
+    gap: 0.5em;
     
 }
+
+main section:nth-of-type(2) form fieldset:nth-of-type(3){
+    grid-column: 1/-1;
+    place-content:center;
+    text-align: center;
+}
+main section:nth-of-type(2) form fieldset:nth-of-type(4){
+    grid-column: 1/-1;
+    place-content:center;
+    text-align: center;
+}
+/* HULP VAN STUDENT ASSISTENT */
+main section:nth-of-type(2) form button{
+    grid-column: 1/-1;
+}
+
+main section:nth-of-type(2) form fieldset legend{
+    color: var(--color-kawasakikleur);
+    font-family: 'basicbold';
+}
+
+
+/* HULP VAN STUDENT ASSISTENT */
+@media only screen and (max-width: 300px) {    
+	main section:nth-of-type(2) form{
+		grid-template-columns: 1fr;
+	}
+}
+
+
+main section:nth-of-type(2) button {
+    padding: 0.5em 1em;
+    font-size: 1em;
+    cursor: pointer;
+    width: 7em;
+    margin: auto;
+}
+
+/* "type="reset" van MDN" */
+main section:nth-of-type(2) button[type="reset"] {
+    background-color: #f5f5f6;
+    border: none;
+    font-family: 'kawasakibasic';
+}
+
+main section:nth-of-type(2) button[type="submit"] {
+    background-color: var(--color-kawasakikleur);
+    color: white;
+    border: none;
+    font-family: 'kawasakibasic';
+}
+
+
+
+/* ***********
+Forum styling #2
+************ */
+
+main section:nth-of-type(3){
+    display: grid;
+    place-content: center;
+    gap: 3em;
+}
+
+main section:nth-of-type(3) h2{
+    text-align: center;
+    margin-top: 25%;
+    margin-bottom: 5%;
+}
+
+main section:nth-of-type(3) article{
+    display: grid;
+    place-content: center;
+    text-align: center;
+    background-color: white;
+}
+
+main section:nth-of-type(3) article h3{
+    color: var(--color-kawasakikleur);
+    font-family: 'basicbold';
+    padding-top: 1.5em;
+}
+
+main section:nth-of-type(3) article p{
+    display: grid;
+    grid-template-columns: 40ch;
+    margin: auto;
+    padding-bottom: 1em;
+    font-family: 'basictext';
+}
+
+main section:nth-of-type(3) article img{
+    width: 100%;
+    height: auto;
+    margin: auto;
+    order: -1;
+}
+
+@media only screen and (min-width: 750px) {    
+	main section:nth-of-type(3) {
+        grid-template-columns: 1fr 1fr;
+    }
+    main section:nth-of-type(3) h2{
+        grid-column: 1/-1;
+    }
+}
+
+main section:nth-of-type(3) article:nth-of-type(2){ 
+    max-width: 25em;
+    margin: auto;
+    filter: drop-shadow(1rem 1rem 20px);
+}
+main section:nth-of-type(3) article:nth-of-type(1){
+    max-width: 25em;
+    margin: auto;
+    filter: drop-shadow(1rem 1rem 20px);
+}
+
+main section:nth-of-type(3) button{
+    margin-top: 2em;
+    padding: 0.5em 1em;
+    font-size: 1em;
+    cursor: pointer;
+    width: 8em;
+    margin: auto;
+    background-color: var(--color-kawasakikleur);
+    border: none;
+    color: white;
+    font-family: 'kawasakibasic';
+    z-index: 1;  
+}
+
+
+
+/* **********
+Styling form #3
+********** */
+
+main section:nth-of-type(4) fieldset {
+    display: grid;
+    place-content: center;
+    background-color: #222222;
+    width: 90%;
+    max-width: 30em;
+    margin: auto;
+}
+
+
+main section:nth-of-type(4) h2{
+    margin-top: 6em;
+    text-align: center;
+}
+
+main section:nth-of-type(4) fieldset{
+    border: none;
+    display: grid;
+    place-content: center;
+}
+
+main section:nth-of-type(4) button{
+    margin-top: 2em;
+    padding: 0.5em 1em;
+    font-size: 1em;
+    cursor: pointer;
+    width: 10em;
+    margin: auto;
+    background-color: var(--color-kawasakikleur);
+    border: none;
+    color: white;
+    font-family: 'kawasakibasic';
+    margin-bottom: 4em;
+}
+
+main section:nth-of-type(4){
+    display: grid;
+    place-content: center;
+}
+
+
+
+/* **********
+Styling form 4
+********** */
+
+
+main section:nth-of-type(5) img{
+    width: 75%;
+}
+
+main section:nth-of-type(5) h2{
+    margin-top: 6em;
+    text-align: center;
+}
+main section:nth-of-type(5) h3{
+    text-align: center;
+}
+main section:nth-of-type(5) p{
+    text-align: center;
+}
+
