--- a/styles/home.css
+++ b/styles/home.css
@@ -12,7 +12,8 @@ body header{
     justify-content: space-between;
     position: absolute;
     inset: 0 0 auto;
-    padding: 5% 5%;
+    padding: 1rem;
+    align-items: center;
 }
 
 body nav ul{
@@ -41,7 +42,7 @@ body header nav ul li a{
 
 .hamburger span {
     height: 20%;
-    background-color: white
+    background-color: var(--color-wit);
 }
 
 nav {
@@ -60,7 +61,7 @@ nav ul {
 
 nav li {
     padding: 1rem;
-    border-bottom: 0.1em solid white;
+    border-bottom: 0.1em solid var(--color-wit);
 }
 
 nav li:last-child {
@@ -68,7 +69,7 @@ nav li:last-child {
 }
 
 nav a {
-    color: white;
+    color: var(--color-wit);
     text-decoration: none;
 }
 
@@ -108,6 +109,7 @@ body main section:nth-of-type(1) h2{
 body main section:nth-of-type(1) a{
     color: var(--color-kawasakikleur);
     font-family: 'basicbold';
+    text-decoration: none;
 }
 
 h2 {
@@ -134,22 +136,27 @@ main section:nth-of-type(2) form{
     /* HULP VAN STUDENT ASSISTENT */
     grid-template-columns: 1fr 1fr;
     
-    background-color: white;
+    background-color: var(--color-wit);
     padding: 2em;
-    filter: drop-shadow(1rem 1rem 20px);
+    filter: drop-shadow(0.1rem 0.1rem 20px  rgba(0, 0, 0, 0.7));
 }
 
 main section:nth-of-type(2) h2{
     text-align: center;
-    margin-top: 7%;
     margin-bottom: 5%;
+
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin-bottom: 1.5em;
+    text-align: center;
+    margin-top: 3em;
 }
 
 main section:nth-of-type(2) form fieldset{
     border: none;
     display: grid;
     gap: 0.5em;
-    
+    accent-color: var(--color-kawasakikleur);
 }
 
 main section:nth-of-type(2) form fieldset:nth-of-type(3){
@@ -169,7 +176,9 @@ main section:nth-of-type(2) form button{
 
 main section:nth-of-type(2) form fieldset legend{
     color: var(--color-kawasakikleur);
-    font-family: 'basicbold';
+    font-family: 'kawasakibasic';
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 
@@ -191,16 +200,24 @@ main section:nth-of-type(2) button {
 
 /* "type="reset" van MDN" */
 main section:nth-of-type(2) button[type="reset"] {
-    background-color: #f5f5f6;
+    background-color: var(--color-witaccent);
     border: none;
     font-family: 'kawasakibasic';
+
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding: 0.8em 1.5em;
 }
 
 main section:nth-of-type(2) button[type="submit"] {
     background-color: var(--color-kawasakikleur);
-    color: white;
+    color: var(--color-wit);
     border: none;
     font-family: 'kawasakibasic';
+
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding: 0.8em 1.5em;
 }
 
 
@@ -217,21 +234,32 @@ main section:nth-of-type(3){
 
 main section:nth-of-type(3) h2{
     text-align: center;
-    margin-top: 25%;
-    margin-bottom: 5%;
+
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin-bottom: 1em;
+    text-align: center;
+    margin-top: 3em;
 }
 
 main section:nth-of-type(3) article{
     display: grid;
-    place-content: center;
     text-align: center;
-    background-color: white;
+    background-color: var(--color-wit);
+    height: 28em;
+
+    max-width: 25em;
+    margin: auto;
+    filter: drop-shadow(0.1rem 0.1rem 20px  rgba(0, 0, 0, 0.7));
+    align-items: start;
 }
 
 main section:nth-of-type(3) article h3{
     color: var(--color-kawasakikleur);
-    font-family: 'basicbold';
+    font-family: 'kawasakisportnobold';
     padding-top: 1.5em;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 main section:nth-of-type(3) article p{
@@ -245,7 +273,7 @@ main section:nth-of-type(3) article p{
 main section:nth-of-type(3) article img{
     width: 100%;
     height: auto;
-    margin: auto;
+    margin: 0;
     order: -1;
 }
 
@@ -258,29 +286,25 @@ main section:nth-of-type(3) article img{
     }
 }
 
-main section:nth-of-type(3) article:nth-of-type(2){ 
-    max-width: 25em;
-    margin: auto;
-    filter: drop-shadow(1rem 1rem 20px);
-}
-main section:nth-of-type(3) article:nth-of-type(1){
-    max-width: 25em;
-    margin: auto;
-    filter: drop-shadow(1rem 1rem 20px);
-}
-
-main section:nth-of-type(3) button{
+main section:nth-of-type(3) a{
     margin-top: 2em;
     padding: 0.5em 1em;
     font-size: 1em;
     cursor: pointer;
-    width: 8em;
     margin: auto;
     background-color: var(--color-kawasakikleur);
     border: none;
-    color: white;
+    color: var(--color-wit);
     font-family: 'kawasakibasic';
-    z-index: 1;  
+    z-index: 1;
+    text-align: center;
+    grid-column: 1/-1;
+    text-decoration: none;
+
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding: 0.8em 1.5em;
+    font-weight: bold;
 }
 
 
@@ -289,39 +313,109 @@ main section:nth-of-type(3) button{
 Styling form #3
 ********** */
 
+main section:nth-of-type(4){
+    max-width: 90%;
+    margin: auto;
+}
+
+main section:nth-of-type(4) form{
+    display: grid;
+    place-content: center;
+    background-color: var(--color-donkergrijsaccent);
+    height: 25em;
+    width: 100%;
+    filter: drop-shadow(0.1rem 0.1rem 20px  rgba(0, 0, 0, 0.7));
+}
+
 main section:nth-of-type(4) fieldset {
     display: grid;
     place-content: center;
-    background-color: #222222;
-    width: 90%;
-    max-width: 30em;
-    margin: auto;
+    margin: 0;
+    border: none;
+    display: grid;
+    place-content: center;
 }
 
 
 main section:nth-of-type(4) h2{
-    margin-top: 6em;
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin-bottom: 1.5em;
     text-align: center;
+    margin-top: 3em;
 }
 
-main section:nth-of-type(4) fieldset{
+main section:nth-of-type(4) legend{
+    color: var(--color-witteh2);
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-family: 'kawasakisport';
+    width: 100%;
+    margin: 4em 0;
+}
+
+main section:nth-of-type(4) fieldset label{
+    color: var(--color-wit);
+    font-size: 1rem;
+    margin-right: 0.5em;
+    font-family: 'kawasakibasic';
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 1em;
+    margin-bottom: 1em;
+    font-size: 1rem;
     border: none;
-    display: grid;
-    place-content: center;
+    background-color: var(--color-donkergrijs);
+    color: var(--color-kawasakikleur);  
+}
+  
+input[type="text"]::placeholder {
+    color: var(--color-grijsaccent);
 }
 
-main section:nth-of-type(4) button{
+select {
+    width: 100%;
+    padding: 1em;
+    font-size: 1rem;
+    border: none;
+    background-color: var(--color-donkergrijs);
+    color: var(--color-wit);
+    appearance: none;
+    margin-bottom: 2em;
+
+    /* Hulp van broer */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 24 24'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 1em center;
+    background-size: 1em;
+}
+
+input[type="text"]:focus {
+    border-color: var(--color-kawasakikleur);
+    background-color: var(--color-wit); 
+}
+
+
+main section:nth-of-type(4) a{
     margin-top: 2em;
-    padding: 0.5em 1em;
-    font-size: 1em;
     cursor: pointer;
-    width: 10em;
     margin: auto;
     background-color: var(--color-kawasakikleur);
     border: none;
-    color: white;
+    color: var(--color-wit);
     font-family: 'kawasakibasic';
-    margin-bottom: 4em;
+    text-decoration: none;
+
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding: 0.8em 1.5em;
+    font-weight: bold;
+    margin-bottom: 6em;
+    z-index: 1;
 }
 
 main section:nth-of-type(4){
@@ -335,19 +429,153 @@ main section:nth-of-type(4){
 Styling form 4
 ********** */
 
-
-main section:nth-of-type(5) img{
-    width: 75%;
+main section:nth-of-type(5){
+    display: grid;
+    background-color: var(--color-donkergrijs);
+    width: 90%;
+    margin: auto;
+    filter: drop-shadow(0.1rem 0.1rem 20px  rgba(0, 0, 0, 0.7));
 }
+
 
 main section:nth-of-type(5) h2{
-    margin-top: 6em;
-    text-align: center;
+    margin-top: 2em;
+    text-align: start;
+    color: var(--color-witteh2);
+    font-family: 'kawasakisportnobold';
+    margin-top: 1em;
+    margin-bottom: 1.5em;
+    margin-left: .5em;
 }
 main section:nth-of-type(5) h3{
-    text-align: center;
+    text-align: start;
+    color: var(--color-witteh2);
+    font-family: 'kawasakisportnobold';
+    font-size: 2em;
+    margin-left: .5em;
+    
 }
 main section:nth-of-type(5) p{
+    text-align: start;
+    color: var(--color-wit);
+    font-family: 'basictext';
+    margin-top: 1em;
+    margin-left: 1em;
+}
+
+
+/* Hulp van kim student assistente */
+main section:nth-of-type(5) article{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    order: -1;
+}
+
+main section:nth-of-type(5) article img:nth-child(1){
+    grid-row: 1/-1;
+    grid-column: 1/2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+main section:nth-of-type(5) article img:nth-child(2){
+    grid-row: 1/2;
+    grid-column: 2/2;
+    width: 100%;
+    object-fit: cover;
+}
+main section:nth-of-type(5) article img:nth-child(3){
+    grid-row: 2/3;
+    grid-column: 2/2;
+    width: 100%;
+    object-fit: cover;
+}
+
+main section:nth-of-type(5) a{
+    margin-top: 2em;
+    padding: 0.5em 1em;
+    font-size: 1em;
+    cursor: pointer;
+    margin: auto;
+    background-color: var(--color-kawasakikleur);
+    border: none;
+    color: var(--color-wit);
+    font-family: 'kawasakibasic';
+    margin-bottom: 4em;
+    text-decoration: none;
+
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding: 0.8em 1.5em;
+    font-weight: bold;
+    margin-top: 2em;
+}
+
+
+/* ************
+FORM STYLING #5
+************ */
+
+main section:nth-of-type(6) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-content: center;
+    margin: auto;
+    width: 90%;
+    /* filter: drop-shadow(0.1rem 0.1rem 20px  rgba(0, 0, 0, 0.7)); */
+}
+
+
+main section:nth-of-type(6) h2{
+    place-content: center;
+    grid-column: 2;
+    display: grid;
+    text-shadow: none;
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin-bottom: 1.5em;
     text-align: center;
+    margin-top: 3em;
+}
+
+main section:nth-of-type(6) article{
+    padding-bottom: 2em;
+    grid-column: 1/-2;
+    padding: 1.5em;
+    background-color: var(--color-wit);
+}
+
+main section:nth-of-type(6) img{
+    width: 100%;
+    grid-column: 3;
+    margin: auto;
+    background-color: var(--color-wit);
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    padding: .5em;
+}
+
+
+main section:nth-of-type(6) article a{
+    color: var(--color-kawasakikleur);
+    text-decoration: none;
+}
+
+main section:nth-of-type(6) a:nth-child(8){
+    cursor: pointer;
+    margin: auto;
+    background-color: var(--color-kawasakikleur);
+    border: none;
+    color: var(--color-wit);
+    font-family: 'kawasakibasic';
+    margin-top: 2em;
+    grid-column: 2;
+    text-align: center;
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding: 1em 1em;
+    font-weight: bold;
 }
 
