--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,3 @@
-/**************/
-/* CSS REMEDY */
-/**************/
-*, *::after, *::before {
-  box-sizing:border-box;
-  margin: 0;  
-}
-
-
-
-
-/*********************/
-/* CUSTOM PROPERTIES */
-/*********************/
-:root {
-	/* startje */
-	--color-text:#111;
-	--color-background:#eee;
-
-	--color-text:#111;
-	--color-witteh2:white;
-    --color-kawasakikleur: green;
-}
-
 @font-face {
     font-family: 'Kawasakibasic'; 
     src: url('../fonts/kawasaki-font-basic.woff2') format('woff2');
@@ -53,8 +29,52 @@
 }
 
 
-/****************/
-/* JOUW STYLING */
-/****************/
+
+
+/**************/
+/* CSS REMEDY */
+/**************/
+*, *::after, *::before {
+	box-sizing:border-box;
+	margin: 0;  
+  }
+  
+  
+  
+  
+  /*********************/
+  /* CUSTOM PROPERTIES */
+  /*********************/
+  :root {
+	  /* startje */
+	  --color-text:#111;
+	  --color-background:#eee;
+  
+	  --color-witteh2:white;
+	  --color-kawasakikleur: #43b02a;
+	  --color-wit: white;
+	  --color-donkergrijs: #333;
+	  --color-ligtgrijs: #ccc ;
+	  --color-ligtgrijs2: #666;
+	  --color-grijsaccent: #bbb;
+	  --color-donkergrijsaccent: #222;
+	  --color-witaccent: #f5f5f6;
+  }
+
+  
+  
+  @media (prefers-color-scheme: dark) {
+	  :root {
+		  --color-text: white; 
+		  --color-background: black; 
+	  
+		  --color-heading: black; 
+		  --color-kawasakikleur: #43b02a; 
+		  --color-light-text: black; 
+		  --color-dark-gray: #b8b6b6; 
+	  }
+  }
+
+
 
 
