--- a/styles/home.css
+++ b/styles/home.css
@@ -16,6 +16,8 @@ body header{
     align-items: center;
 }
 
+
+/* Hulp bij het opzetten van mijn hamburger menu (bij display none en block) CHAT GPT */
 body nav ul{
     inset: 0 0 0 0;
 }
@@ -32,7 +34,7 @@ body header nav ul li a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 2em;
+    width: 2.5em;
     height: 1.2em;
     background: none;
     border: none;
@@ -41,8 +43,9 @@ body header nav ul li a{
 }
 
 .hamburger span {
+    width: 100%;
     height: 20%;
-    background-color: var(--color-wit);
+    background-color: var(--color-witteaccent);
 }
 
 nav {
@@ -51,6 +54,7 @@ nav {
     right: 0;
     background-color: var(--color-kawasakikleur);
     display: none; 
+    z-index: 2; 
 }
 
 nav ul {
@@ -61,7 +65,7 @@ nav ul {
 
 nav li {
     padding: 1rem;
-    border-bottom: 0.1em solid var(--color-wit);
+    border-bottom: 0.1em solid var(--color-witteaccent);
 }
 
 nav li:last-child {
@@ -69,15 +73,13 @@ nav li:last-child {
 }
 
 nav a {
-    color: var(--color-wit);
+    color: var(--color-witteaccent);
     text-decoration: none;
 }
 
 nav.active {
     display: block;
 }
-
-
 
 
 /* ***********
@@ -114,10 +116,12 @@ body main section:nth-of-type(1) a{
 
 h2 {
     font-family: 'kawasakisportnobold';
+    color: var(--color-zwarteh2);
 }
 
 a{
     font-family: 'basicbold';
+    text-transform: uppercase;
 }
 
 
@@ -136,7 +140,7 @@ main section:nth-of-type(2) form{
     /* HULP VAN STUDENT ASSISTENT */
     grid-template-columns: 1fr 1fr;
     
-    background-color: var(--color-wit);
+    background-color: var(--color-witteaccent);
     padding: 2em;
     filter: drop-shadow(0.1rem 0.1rem 20px  rgba(0, 0, 0, 0.7));
 }
@@ -200,7 +204,7 @@ main section:nth-of-type(2) button {
 
 /* "type="reset" van MDN" */
 main section:nth-of-type(2) button[type="reset"] {
-    background-color: var(--color-witaccent);
+    background-color: var(--color-witteaccent);
     border: none;
     font-family: 'kawasakibasic';
 
@@ -211,7 +215,7 @@ main section:nth-of-type(2) button[type="reset"] {
 
 main section:nth-of-type(2) button[type="submit"] {
     background-color: var(--color-kawasakikleur);
-    color: var(--color-wit);
+    color: var(--color-witteaccent);
     border: none;
     font-family: 'kawasakibasic';
 
@@ -245,7 +249,7 @@ main section:nth-of-type(3) h2{
 main section:nth-of-type(3) article{
     display: grid;
     text-align: center;
-    background-color: var(--color-wit);
+    background-color: var(--color-witteaccent);
     height: 28em;
 
     max-width: 25em;
@@ -294,7 +298,7 @@ main section:nth-of-type(3) a{
     margin: auto;
     background-color: var(--color-kawasakikleur);
     border: none;
-    color: var(--color-wit);
+    color: var(--color-witteaccent);
     font-family: 'kawasakibasic';
     z-index: 1;
     text-align: center;
@@ -355,7 +359,7 @@ main section:nth-of-type(4) legend{
 }
 
 main section:nth-of-type(4) fieldset label{
-    color: var(--color-wit);
+    color: var(--color-witteh2);
     font-size: 1rem;
     margin-right: 0.5em;
     font-family: 'kawasakibasic';
@@ -363,13 +367,14 @@ main section:nth-of-type(4) fieldset label{
     font-weight: bold;
 }
 
+/* Hulp van MDN hoe ik de type=text moet aanspreken */
 input[type="text"] {
     width: 100%;
     padding: 1em;
     margin-bottom: 1em;
     font-size: 1rem;
     border: none;
-    background-color: var(--color-donkergrijs);
+    background-color: var(--color-donkergrijsinfo);
     color: var(--color-kawasakikleur);  
 }
   
@@ -382,8 +387,8 @@ select {
     padding: 1em;
     font-size: 1rem;
     border: none;
-    background-color: var(--color-donkergrijs);
-    color: var(--color-wit);
+    background-color: var(--color-donkergrijsinfo);
+    color: var(--color-witteaccent);
     appearance: none;
     margin-bottom: 2em;
 
@@ -396,7 +401,7 @@ select {
 
 input[type="text"]:focus {
     border-color: var(--color-kawasakikleur);
-    background-color: var(--color-wit); 
+    background-color: var(--color-witteaccent); 
 }
 
 
@@ -406,7 +411,7 @@ main section:nth-of-type(4) a{
     margin: auto;
     background-color: var(--color-kawasakikleur);
     border: none;
-    color: var(--color-wit);
+    color: var(--color-witteaccent);
     font-family: 'kawasakibasic';
     text-decoration: none;
 
@@ -431,7 +436,7 @@ Styling form 4
 
 main section:nth-of-type(5){
     display: grid;
-    background-color: var(--color-donkergrijs);
+    background-color: var(--color-donkergrijsinfo);
     width: 90%;
     margin: auto;
     filter: drop-shadow(0.1rem 0.1rem 20px  rgba(0, 0, 0, 0.7));
@@ -457,7 +462,7 @@ main section:nth-of-type(5) h3{
 }
 main section:nth-of-type(5) p{
     text-align: start;
-    color: var(--color-wit);
+    color: var(--color-witteaccent);
     font-family: 'basictext';
     margin-top: 1em;
     margin-left: 1em;
@@ -500,7 +505,7 @@ main section:nth-of-type(5) a{
     margin: auto;
     background-color: var(--color-kawasakikleur);
     border: none;
-    color: var(--color-wit);
+    color: var(--color-witteaccent);
     font-family: 'kawasakibasic';
     margin-bottom: 4em;
     text-decoration: none;
@@ -543,14 +548,14 @@ main section:nth-of-type(6) article{
     padding-bottom: 2em;
     grid-column: 1/-2;
     padding: 1.5em;
-    background-color: var(--color-wit);
+    background-color: var(--color-witteaccent);
 }
 
 main section:nth-of-type(6) img{
     width: 100%;
     grid-column: 3;
     margin: auto;
-    background-color: var(--color-wit);
+    background-color: var(--color-witteaccent);
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -568,7 +573,7 @@ main section:nth-of-type(6) a:nth-child(8){
     margin: auto;
     background-color: var(--color-kawasakikleur);
     border: none;
-    color: var(--color-wit);
+    color: var(--color-witteaccent);
     font-family: 'kawasakibasic';
     margin-top: 2em;
     grid-column: 2;
@@ -577,5 +582,102 @@ main section:nth-of-type(6) a:nth-child(8){
     text-transform: uppercase;
     padding: 1em 1em;
     font-weight: bold;
+    margin-bottom: 4em;
+    text-decoration: none;
 }
 
+
+
+
+/* ************
+FORM STYLING #6
+************ */
+
+
+main section:nth-of-type(7) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    background-color: var(--color-donkergrijsinfo);
+    position: relative;
+    gap: 1rem;
+    overflow-x: auto;
+    padding: 1rem;
+}
+
+main section:nth-of-type(7) h2 {
+    top: 0;
+    grid-column: 1 / -1;
+    color: var(--color-witteh2);
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin: 0;
+    background-color: var(--color-donkergrijsinfo);
+    z-index: 2;
+    padding: 1rem;
+    text-align: center;
+}
+
+main section:nth-of-type(7) article {
+    background-color: var(--color-donkergrijsaccent);
+    grid-row: 2;
+    width: 15em; 
+}
+
+main section:nth-of-type(7) article img {
+    width: 15em; 
+    cursor: pointer;
+}
+
+main section:nth-of-type(7) h3 {
+    color: var(--color-wittetext);
+    padding: 1rem;
+}
+
+main section:nth-of-type(7) article p {
+    margin-top: 2em;
+    margin-bottom: 2em;
+    color: var(--color-wittetext);
+    padding: 1em;
+}
+
+@media only screen and (min-width: 850px) {
+	main section:nth-of-type(7) h2 {
+        grid-column: 2;
+    }
+}
+
+
+
+
+
+
+
+/* *************
+LIGHT & DARK
+************* */
+
+@media (prefers-color-scheme: dark) {
+	:root body{
+		--color-zwarteh2: white;
+		background-image: url(../images/background-img-dark.jpg);
+	}
+
+    main section:nth-of-type(2) form {
+        background-color: var(--color-donkergrijsinfo);
+        color: var(--color-wittetext);
+    }
+
+    main section:nth-of-type(3) article{
+        background-color: var(--color-donkergrijsinfo);
+        color: var(--color-wittetext);
+    }
+    main section:nth-of-type(6) article{
+        background-color: var(--color-donkergrijsinfo);
+        color: var(--color-wittetext);
+    }
+    main section:nth-of-type(6) img{
+        background-color: var(--color-donkergrijsinfo);
+    }
+
+}
