--- a/styles/kernwaarden.css
+++ b/styles/kernwaarden.css
@@ -1,6 +1,10 @@
 /* *************
 Header 
 ************* */
+body{
+    background-color: var(--color-background);
+}
+
 
 body header h1 img{
     width: 20%;
@@ -14,7 +18,7 @@ body header{
     inset: 0 0 auto;
     padding: 1rem;
     align-items: center;
-    background-color: var(--color-text);
+    background-color: var(--color-zwarteheader);
 }
 
 body nav ul{
@@ -33,7 +37,7 @@ body header nav ul li a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 2em;
+    width: 2.5em;
     height: 1.2em;
     background: none;
     border: none;
@@ -42,16 +46,18 @@ body header nav ul li a{
 }
 
 .hamburger span {
+    width: 100%;
     height: 20%;
-    background-color: var(--color-witteh2);
-}
+    background-color: var(--color-witteaccent);
+}  
 
 nav {
     position: absolute;
     top: 50%;
     right: 0;
     background-color: var(--color-kawasakikleur);
-    display: none; 
+    display: none;
+    z-index: 2; 
 }
 
 nav ul {
@@ -85,8 +91,7 @@ FORM #1
 
 body main form {
     margin-top: 5em;
-    background-color: var(--color-ligtgrijs);
-    
+    padding: .5em;
 }
 
 body main form fieldset{
@@ -109,16 +114,106 @@ body main form fieldset select {
     appearance: none;
     text-transform: uppercase;
     color: var(--color-text);
-    /* Hulp van broer */
     background-repeat: no-repeat;
     background-size: 1em;
 }
+
+/* **************
+Select responsive
+***************** */
+select {
+    display: block;
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1rem;
+}
+
+fieldset ul {
+    display: none;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+fieldset ul li {
+    margin: 0.5rem 0;
+}
+
+fieldset ul li a {
+    text-decoration: none;
+    font-size: 1rem;
+    color: var(--color-text);
+}
+
+
+@media (min-width: 1000px) {
+    select {
+        display: none;
+    }
+
+    fieldset ul {
+        display: block;
+        font-family: 'basictext';
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 1.2em;
+    }
+
+    fieldset ul li{
+        border-bottom: 0.1em  solid var(--color-kawasakikleur);
+        width: 8em;
+        margin-bottom: 1.5em;
+    }
+    fieldset ul li:hover{
+        transform: translateX(2em);
+        transition: transform 0.3s ease;
+    }
+    fieldset ul li a:hover{
+        color: var(--color-kawasakikleur);
+    }
+
+    main form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 20%;
+        height: 230%;
+        position: absolute;
+    }
+
+    section {
+        margin-left: 20%;
+    }
+
+    main section:nth-of-type(1){
+        top: 3em;
+    }
+}
+
 
 
 
 /* *******************
 KERNWAARDEN STUK 
 ******************* */
+body main section:nth-of-type(1){
+    position: relative;
+}
+
+body main section:nth-of-type(1) img:nth-of-type(1){
+    position: absolute;
+    width: 23em;
+    z-index: -1;
+    /* Hulp van sanne bij laatste gesprek */
+    clip-path:polygon(
+        0 0,
+        100% 100%,
+        100% 0,
+        0 0
+    );
+    top: 0;
+    right: 0;
+}
 
 body main section:nth-of-type(1) span {
     color: var(--color-kawasakikleur);
@@ -130,6 +225,7 @@ body main section:nth-of-type(1) h2{
     padding: 2em;
     font-family: 'basicbold';
     font-size: 2em;
+    color: var(--color-zwarteh2);
 }
 
 body main section:nth-of-type(1) blockquote{
@@ -137,6 +233,8 @@ body main section:nth-of-type(1) blockquote{
     padding: 2em;
     line-height: 1.8em;
     max-width: 52ch;
+    z-index: -1;
+    color: var(--color-text);
 }
 
 body main section:nth-of-type(1) p{
@@ -144,6 +242,7 @@ body main section:nth-of-type(1) p{
     padding: 2em;
     line-height: 2.2em;
     max-width: 52ch;
+    color: var(--color-text);
 }
 
 body main section:nth-of-type(1) img{
@@ -153,6 +252,8 @@ body main section:nth-of-type(1) img{
 @media (min-width: 650px){
     body main section:nth-of-type(1) img{
         width: 50%;
+        position: absolute;
+        right: 0;
     }
 
     body main section:nth-of-type(1) blockquote{
@@ -161,6 +262,15 @@ body main section:nth-of-type(1) img{
         max-width: 52ch;
         font-size: 1.4em;
     }
+
+    body main section:nth-of-type(1) img:nth-of-type(1){
+    width: 75%;
+    }
+
+    body main section:nth-of-type(1) p{
+        margin-top: 10em;
+    }
+
 }
 
 
@@ -170,7 +280,7 @@ body main section:nth-of-type(1) img{
 KERNWAARDEN STUK #2
 ******************* */
 body main section:nth-of-type(2){
-    background-color: var(--color-ligtgrijs2);
+    background-color: var(--color-ligtgrijsfooter);
     padding: 1em;
     width: 90%;
     margin: auto;
@@ -194,14 +304,18 @@ body main section:nth-of-type(2) h3{
 }
 
 
+@media (min-width: 650px){
+    body main section:nth-of-type(2){
+        position: absolute;
+        width: 40%;
+        right: 0;
+    }
+}
+
+
 /* *******************
 KERNWAARDEN STUK #3
 ******************* */
-
-body main section:nth-of-type(3){
-    align-content: center;
-    
-}
 
 body main section:nth-of-type(3) h2{
     display: none;
@@ -210,12 +324,42 @@ body main section:nth-of-type(3) h2{
 body main section:nth-of-type(3) img{
     width: 90%;
     margin-top: 4em;
+    margin-left: 2em;
+    margin-bottom: 2em;
 }
 
 body main section:nth-of-type(3) p{
     font-family: 'basictext';
     padding: 2em;
     line-height: 2.2em;
-    max-width: 52ch;
-    background-color: var(--color-ligtgrijs);
+    width: 52ch;
+    background-color: var(--color-ligtgrijsbg);
+    margin: auto;
+    width: 100%;
+}
+
+@media (min-width: 650px){
+    body main section:nth-of-type(3) img{
+        width: 45%;
+        margin-top: 7em;
+    }
+
+    body main section:nth-of-type(3) p{
+        width: 100%;
+    }
+    
+}
+
+
+
+/* ************
+LIGHT & DARK
+************ */
+
+@media (prefers-color-scheme: dark) {
+	:root body{
+		--color-background: #333;
+        --color-zwarteh2: white;
+        --color-text: white;
+	}
 }
